property name is not required

--- a/wcm-com.html
+++ b/wcm-com.html
@@ -3,7 +3,7 @@
         category: 'function',
         color: '#FFAAAA',
         defaults: {
-            name: {value:"", required: true}
+            name: {value:""}
         },
         credentials: {
             host: {type:"text"},
